Fixed card width for the section on legacy, fixed button alignment on network and added spacing for and improved spacing for network page grid

--- a/components/LegacyPage/LegacyMethods/MethodCard/methodcard.module.scss
+++ b/components/LegacyPage/LegacyMethods/MethodCard/methodcard.module.scss
@@ -12,8 +12,8 @@
 
   @include lg {
     min-height: $card-height;
-    max-width: 510px;
-    min-width: 400px;
+    max-width: 420px;
+    min-width: 420px;
     padding: 17px;
     max-height: $card-height;
   }
